<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stechuhr</string>

    <!--generic-->
    <string name="day">Tag</string>
    <string name="days">Tage</string>
    <string name="today">Heute</string>
    <string name="week">Woche</string>
    <string name="weeks">Wochen</string>
    <string name="month">Monat</string>
    <string name="months">Monate</string>
    <string name="pause">Pause</string>
    <string name="yesterday">Gestern</string>

    <string name="overtime">Überstunden</string>
    <string name="worktime">Arbeitszeit</string>
    <string name="since">Seit</string>
    <string name="data">Daten</string>

    <string name="space">\u00A0\u00A0\u00A0\u00A0</string>
    <string name="refresh">Aktualisieren</string>
    <string name="settings">Einstellungen</string>

    <!--Buttons-->
    <string name="btnStartDay">Tag beginnen</string>
    <string name="btnEndDay">Tag beenden</string>
    <string name="btnStartPause">Pause beginnen</string>
    <string name="btnEndPause">Pause beenden</string>

    <!--Titles & Menu-->
    <string name="backupImport">Backup importieren</string>
    <string name="backupCreate">Backup erstellen</string>

    <string name="dataCheck">Daten überprüfen</string>
    <string name="dataEdit">Daten bearbeiten</string>
    <string name="dataDelete">Alle Daten löschen</string>


    <string name="listDay">Tagesansicht</string>
    <string name="listWeek">Wochenansicht</string>
    <string name="listMonth">Monatsansicht</string>

    <!--Error Messages-->
    <string name="err_beginDay">Tag beginnen ist nicht das erste Ereignis</string>
    <string name="err_MultipleBeginDay">Mehr als ein Tagesstart</string>
    <string name="err_MessingPauseBegin">Fehlender Pausenbeginn</string>
    <string name="err_MissingPauseEnd">Fehlendes Pausenende</string>
    <string name="err_MessingEnd">Fehlendes Tagesende</string>
    <string name="err_EndDay">Tag beenden ist nicht das letzte Ereignis</string>
    <string name="noError">Keine Fehler gefunden.</string>

    <!--State Text-->
    <string name="notWorked">Nicht gearbeitet</string>
    <string name="Welcome">Willkommen in der Stechuhr App.\n\nSie können mit den Buttons im oberen Bereich Ihre Arbeitszeit erfassen. In den Einstellungen können Sie festlegen, welche Informationen hier im unteren Bereich angezeigt werden sollen. Standardmäßig werden der aktuelle Tag, Woche und Monat angezeigt, sobald Sie das erste Mal gestempelt haben.\n\nViel Spaß mit der App.\nIhr dihco.de Entwicklerteam</string>

    <!--generated-->
    <string name="dataSource">Datenquelle:</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="legalNoticeContent">Martin Wegner\nOststr. 30\n99086 Erfurt\nDeutschland\n0170/2303733\nsupport@dihco.de</string>
    <string name="legalNotice">Impressum</string>
    <string name="privacyPolicy">Datenschutzerklärung</string>
    <string name="privacyPolicyContent">Es werden keine Daten des Nutzers automatisch an die Entwickler der App oder dritte Parteien gesendet.\n\nAlle Daten der App werden in einer SQLite Datenbank auf dem Gerät gespeichert. Diese Daten können laut developer.android.com nur durch die App selbst gelesen werden. Eine Garantie darauf besteht jedoch nicht.\n\nDer Nutzer kann Backups oder Zusammenfassungen lokal erstellen. Dieser Vorgang muss immer vom Nutzer ausgelöst werden und erfolgt nie automatisch. Die dabei entstehenden Daten werden unverschlüsselt auf dem Gerät oder der SD-Karte gespeichert. Andere Apps können möglicherweise auf diese Daten zugreifen.\n\nDer Nutzer kann Backups oder Zusammenfassungen für einen Clouddienst (wie z.B. Google Drive) erstellen. Dieser Vorgang muss immer vom Nutzer ausgelöst werden und erfolgt nie automatisch. Die dabei entstehenden Daten werden möglicherweise unverschlüsselt im Klartext übertragen. Die Daten werden innerhalb des Clouddienstes unverschlüsselt gespeichert und können möglicherweise von anderen Programmen ausgelesen werden.</string>
    <string name="createBackup">Backup erstellen</string>
    <string name="ExistingBackups">Vorhandene Backups</string>
    <string name="LocalBackup">Lokale Backups</string>
    <string name="GoogleDriveBackups">Backups auf Google Drive</string>
    <string name="GoogleDriveConnectError">Ein Fehler ist bei der Verbindung zu Google Drive aufgetreten.</string>
    <string name="pleaseWait">Bitte warten...</string>
    <string name="backupSuccess">Backup erfolgreich.</string>
    <string name="backupError">Backup fehlgeschlagen.</string>
    <string name="exportSuccess">Export erfolgreich.</string>
    <string name="exportError">Export fehlgeschlagen.</string>
    <string name="dataAndBackup">Daten und Backup</string>
    <string name="display">Anzeige</string>
    <string name="general">Allgemein</string>
    <string name="removeItemsWithoutWorktime">Elemente ohne Arbeitszeit werden ausgeblendet.</string>
    <string name="cleanupFrontpage">Startseite aufräumen?</string>
    <string name="cleanupOverviews">Übersichten aufräumen?</string>
    <string name="frontpage">Startseite</string>
    <string name="position1">Position 1</string>
    <string name="position2">Position 2</string>
    <string name="position3">Position 3</string>
    <string name="position4">Position 4</string>
    <string name="position5">Position 5</string>
    <string name="position6">Position 6</string>
    <string name="overview">Übersichten</string>
    <string name="maxDays">Max. Anzahl Tage in der Tagesansicht</string>
    <string name="maxWeeks">Max. Anzahl Wochen in der Wochenansicht</string>
    <string name="exportFormat">Exportformat</string>
    <string name="export">Export</string>


</resources>
