<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_Refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/refresh" />
     <item
        android:id="@+id/action_ListDay"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/listDay" />

    <item
        android:id="@+id/action_ListWeek"
        android:orderInCategory="520"
        android:showAsAction="never"
        android:title="@string/listWeek" />

    <item
        android:id="@+id/action_ListMonth"
        android:orderInCategory="540"
        android:showAsAction="never"
        android:title="@string/listMonth" />

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="2000"
        android:showAsAction="always"
        android:icon="@drawable/ic_settings"/>

    <item android:id="@+id/action_Data_and_backup"
        android:title="@string/dataAndBackup"
        android:orderInCategory="1000"
        android:showAsAction="never"/>

    <item android:id="@+id/action_Export"
        android:title="@string/export"
        android:orderInCategory="1100"
        android:showAsAction="never"/>



</menu>
